feat: labeling 병렬 처리 로직 추가